# skillsync

./: .gitignore  CHANGELOG.md  COMPLETION_REPORT.md  DEVELOPMENT.md  EXAMPLES.md  LICENSE  NEXT_STEPS.md  PROJECT_SUMMARY.md  PUBLISHED.md  QUICKSTART.md  README.md  README_CN.md  STRUCTURE.md  install.ps1  install.sh  pyproject.toml  setup_dev.sh  test_all.sh  test_cli.py
skillsync/: __init__.py  cli.py  daemon.py  scanner.py  syncer.py
skillsync/cloud/: __init__.py  github.py
